Fix bad line wrapping

--- a/assets/app/src/index.css
+++ b/assets/app/src/index.css
@@ -147,6 +147,11 @@ table {
   height: 100%;
 }
 
+p,
+pre {
+  line-height: 1.3;
+}
+
 input,
 select,
 textarea {
